<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_background_hd"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Instrucciones" >

    <TextView
        android:id="@+id/tv_instrucciones"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/sv_instrucciones_scroll"
        android:layout_alignRight="@+id/sv_instrucciones_scroll"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="14dp"
       android:background="@drawable/rounded_corners_white"
        android:minHeight="25dip"
        android:text="@string/title_activity_instrucciones"
        android:textSize="25sp" />

    <ScrollView
        android:id="@+id/sv_instrucciones_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_instrucciones"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corners_white"
        android:paddingBottom="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideInset" >

            <TextView
                android:id="@+id/instrucciones_titulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_instrucciones_titulo1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/instrucciones_contenido1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_instrucciones_contenido1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/instrucciones_titulo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_instrucciones_titulo2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/instrucciones_contenido2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_instrucciones_contenido2"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/instrucciones_titulo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_instrucciones_titulo3"
                android:textSize="18sp" />
            
            <TextView
                android:id="@+id/instrucciones_contenido3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_instrucciones_contenido3"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>