<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Editar"
    android:background="@drawable/bg_login_hd" >

    <Button
        android:id="@+id/bt_edi_salir"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@anim/main_button_gris"
        android:minHeight="25dip"
        android:textSize="25sp"
        android:text="@string/bt_salir_sin_guardar" />

    <Button
        android:id="@+id/bt_edi_guardar"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_edi_salir"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@anim/main_button_orange"
        android:minHeight="25dip"
        android:textSize="25sp"
        android:text="@string/bt_guardar"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/input_edi_rpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_edi_guardar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="22dp"
        android:background="@anim/main_text_white"
        android:drawableLeft="@drawable/wm_icon_pass"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/des_rconstrasenia"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/input_edi_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_edi_rpass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@anim/main_text_white"
        android:drawableLeft="@drawable/wm_icon_pass"
        android:drawablePadding="5dp"
        android:ems="10"
        android:layout_marginBottom="5dp" 
        android:hint="@string/des_nueva_constrasenia"
        android:inputType="textPassword" />

</RelativeLayout>