<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_background_hd"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    tools:context=".JuegoNivel3" >

    <Button
        android:id="@+id/bt_nivel3_respuesta4"
        style="@style/ButtonTextRespuesta"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="3sp"
        android:background="@anim/main_button_respuesta"
        android:text="@string/bt_registrar"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt_nivel3_respuesta2"
        style="@style/ButtonTextRespuesta"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:layout_above="@+id/bt_nivel3_respuesta3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="3sp"
        android:background="@anim/main_button_respuesta"
        android:text="@string/bt_registrar"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt_nivel3_respuesta1"
        style="@style/ButtonTextRespuesta"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:layout_above="@+id/bt_nivel3_respuesta2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3sp"
        android:background="@anim/main_button_respuesta"
        android:text="@string/bt_registrar"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt_nivel3_respuesta3"
        style="@style/ButtonTextRespuesta"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:layout_above="@+id/bt_nivel3_respuesta4"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="3sp"
        android:background="@anim/main_button_respuesta"
        android:text="@string/bt_registrar"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bt_nivel3_respuesta1"
        android:layout_alignLeft="@+id/bt_nivel3_respuesta1"
        android:layout_alignRight="@+id/bt_nivel3_respuesta1"
        android:layout_below="@+id/rlayout3"
        android:layout_margin="10dp"
        android:gravity="center_vertical|center_horizontal" >

        <ImageView
            android:id="@+id/iv_nivel3_imagen"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/bt_colaborar"
            android:scaleType="fitCenter"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout3"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/bt_nivel3_respuesta1"
        android:layout_alignRight="@+id/bt_nivel3_respuesta1"
        android:background="@drawable/rounded_corners_white" >

        <TextView
            android:id="@+id/tv_nivel3_numpregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:text="@string/niveles_num"
            android:textColor="#373737"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_nivel3_racha"
            android:layout_alignBottom="@+id/tv_nivel3_racha"
            android:layout_alignParentRight="true"
            android:layout_marginRight="13dp"
            android:textColor="#373737"
            android:text="@string/rachaaciertos"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignTop="@+id/tv_nivel3_highscore"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitEnd"
            android:src="@drawable/popcorn" />

        <TextView
            android:id="@+id/tv_nivel3_highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_nivel3_numpregunta"
            android:layout_alignBottom="@+id/tv_nivel3_numpregunta"
            android:layout_toLeftOf="@+id/imageView3"
            android:text="@string/niveles_highscore_3"
            android:textColor="#373737"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_nivel3_racha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_marginRight="38dp"
            android:layout_toLeftOf="@+id/countdown"
            android:text="@string/niveles_racha_3"
            android:textColor="#373737"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>