<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_medal"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/iv_popcorn"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/ranking_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_medal"
        android:layout_toRightOf="@+id/iv_medal"
        android:text="@string/bt_aniadir_amigo"
        android:textColor="#373737"
        android:textSize="20sp" />

    <Button
        android:id="@+id/iv_stats"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:background="@drawable/stats" />

    <ImageView
        android:id="@+id/iv_popcorn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_stats"
        android:layout_toLeftOf="@+id/iv_stats"
        android:contentDescription="@string/app_name"
        android:src="@drawable/popcorn" />

    <TextView
        android:id="@+id/tv_ranking_puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ranking_nombre"
        android:layout_alignBottom="@+id/ranking_nombre"
        android:layout_toLeftOf="@+id/iv_popcorn"
        android:text="@string/niveles_highscore_1"
        android:textSize="20sp" />

</RelativeLayout>